--- a/src/app/pages/supplier/supplier.component.css
+++ b/src/app/pages/supplier/supplier.component.css
@@ -82,7 +82,7 @@ th, td {
 
 
 .p-inputgroup{
-    width: 1045px;
+    width: 100%;
     background: #F7F7F7 0% 0% no-repeat padding-box;
     border: 1px solid #E0E0E0;
     height: 57px;
