--- a/src/styles.css
+++ b/src/styles.css
@@ -127,6 +127,10 @@ Colors
     color: #007AFF !important;
 }
 
+.green-txt-color {
+    color: #6B9D3F !important;
+}
+
 .red-color {
     color: #B71212 !important;
 }
