--- a/src/app/pages/transaction/components/orders/orders.component.html
+++ b/src/app/pages/transaction/components/orders/orders.component.html
@@ -12,7 +12,7 @@
     <div class="orders-info" *ngSwitchCase="'orders'">
         <div class="row mt-2">
             <div class="col-sm-12 col-md-12 col-lg-3  my-2 my-lg-0">
-                <p class="Tajawal-Bold fs-16">الأطراف</p>
+                <p class="Tajawal-Bold fs-16 blue-txt-color">الأطراف</p>
                 <div class="people-detai my-2 d-flex align-items-center">
                     <span class="blue-txt-color mx-2 Tajawal-Bold">العميل</span>
                     <span class="Tajawal-Bold me-3">{{response?.client}}</span>
