--- a/src/app/pages/transaction/transaction.component.css
+++ b/src/app/pages/transaction/transaction.component.css
@@ -23,3 +23,48 @@
    align-items: center;
    color: #F7F7F7;
 }
+
+.dropbtn {
+    background-color: black;
+    color: white;
+    padding: 5px;
+    border: none;
+    cursor: pointer;
+    width: 50px;
+    height: 40px;
+    border-radius: 13px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+.dropbtn img{
+    width: 70%;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    left: 10px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
