--- a/src/app/pages/transaction/transaction.component.html
+++ b/src/app/pages/transaction/transaction.component.html
@@ -1,14 +1,27 @@
 <div class="row mt-50">
-    <div class="col-12">
+    <div class="col-10">
         <p class="Tajawal-Bold fs-30">المعاملات</p>
+    </div>
+    <div class="col-2 d-flex justify-content-end">
+        <div class="dropdown">
+            <button class="dropbtn"><img src="assets/settings-sliders.png" alt="img"></button>
+            <div class="dropdown-content">
+            <a (click)="filterData('الكل')">الكل</a>
+            <a (click)="filterData('بإنتظار الدفع')">بإنتظار الدفع</a>
+            <a (click)="filterData('بإنتظار تأكيد الدفع')">بإنتظار تأكيد الدفع</a>
+            <a (click)="filterData('مكتمل')">مكتمل</a>
+            <a (click)="filterData('منتهي')">منتهي</a>
+            <a (click)="filterData('مرفوض')">مرفوض</a>
+            </div>
+          </div>
     </div>
 </div>
 
 <div style="height: max-content;" class="row">
-    <div class="col-sm-12 col-md-6 col-lg-3 px-2 my-2" *ngFor="let item of allData | paginate:{
+    <div class="col-sm-12 col-md-6 col-lg-3 px-2 my-2" *ngFor="let item of allFilterData?.length ? allFilterData : allData | paginate:{
         itemsPerPage : 8,
         currentPage : page,
-        totalItems : allData?.length
+        totalItems :  allFilterData?.length ? allFilterData?.length : allData?.length
     }; let i = index ">
         <div class="order-box d-flex flex-column justify-content-between h-100">
             <img width="100%" height="126px" src="{{item.supplier_product_image}}" alt="img">
@@ -25,9 +38,9 @@
     </div>
 </div>
 
-<div class="mt-3">
+<div *ngIf="autoHidePagination" class="mt-3">
     <pagination-controls 
-        [autoHide]="allData.length > 8 ? false : true"
+        [autoHide]="allFilterData?.length ? allFilterData?.length : allData?.length > 8 ? false : true"
         [responsive]="true"
          nextLabel = ">"
         previousLabel ="<"
