--- a/src/app/pages/supplier/components/supplier-reviews/supplier-reviews.component.html
+++ b/src/app/pages/supplier/components/supplier-reviews/supplier-reviews.component.html
@@ -19,7 +19,7 @@
                 </td>
                 <td class="fs-16 Tajawal-Medium comment">
                     <div class="comment-detail text-end">
-                        <p class="my-0">{{w.replace(this.regex, '*')}}</p>
+                        <p class="my-0">{{item.client.replace(this.regex, '*')}}</p>
                         <p class="comment-parag my-0">{{item.comment}}</p>
                     </div>
                 </td>
