--- a/src/app/pages/client/order-details/order-details.component.html
+++ b/src/app/pages/client/order-details/order-details.component.html
@@ -273,19 +273,21 @@
             <!-- End Row For payment Order Details -->
 
             <!-- Row For Rating Order -->
-            <div *ngIf="orderData?.step == 3" class="row col-container align-items-center mt-30">
-                <div class="col-sm-12 col-md-12 col-lg-2 px-2 my-2 my-lg-0 d-flex flex-column">
-                    <p  class="Tajawal-Bold fs-25 green-txt-color my-0">الرجاء تقييم المورد</p>
-                    <p-rating [(ngModel)]="ratingValue" [stars]="5" [cancel]="false"></p-rating>
+            <form #form="ngForm" (ngSubmit)="submitReview(form)">
+                <div *ngIf="orderData?.step == 3" class="row col-container align-items-center mt-30">
+                        <div class="col-sm-12 col-md-12 col-lg-2 px-2 my-2 my-lg-0 d-flex flex-column">
+                            <p  class="Tajawal-Bold fs-25 green-txt-color my-0">الرجاء تقييم المورد</p>
+                            <p-rating ngModel #rating="ngModel" name="rating" id="rating" [stars]="5" [cancel]="false"></p-rating>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-7 px-2 my-2 my-lg-0">
+                            <textarea required ngModel #comment="ngModel" name="comment" id="comment" style="width: 100%; height: 136px; border: 1px solid #D6D6D6; border-radius: 8px; padding: 23px;" placeholder="اكتب هنا.."></textarea>
+                        </div>
+        
+                        <div class="col-sm-12 col-md-12 col-lg-3 btn-action px-2 my-2 my-lg-0">
+                            <button type="submit" [disabled]="form.invalid" class="send-rating-btn Tajawal-Medium fs-25">إرسال</button>
+                        </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-7 px-2 my-2 my-lg-0">
-                    <textarea name="rate_desc" id="rate_desc" style="width: 100%; height: 136px; border: 1px solid #D6D6D6; border-radius: 8px; padding: 23px;" placeholder="اكتب هنا.."></textarea>
-                </div>
-
-                <div class="col-sm-12 col-md-12 col-lg-3 btn-action px-2 my-2 my-lg-0">
-                    <button class="send-rating-btn Tajawal-Medium fs-25">إرسال</button>
-                </div>
-            </div>
+            </form>
             <!-- End Row For Rating Order -->
         </div>
 
