--- a/src/app/pages/supplier/supplier.component.css
+++ b/src/app/pages/supplier/supplier.component.css
@@ -66,6 +66,10 @@ table.rounded-corners thead tr th:first-child{
     border-top-right-radius: 20px !important;
 }
 
+th {
+    width: 100px !important;
+  }
+
 th, td {
     vertical-align: middle;
     text-align: center;
