--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -23,7 +23,7 @@
                     <i class="pi pi-user-plus fs-4"></i>
                 <div class="d-flex justify-content-between align-items-center">
                     <p class="m-0 Tajawal-Medium fs-20">أضف وكيل</p>
-                    <p class="number m-0 Tajawal-Medium fs-20 me-5">{{allAssociations?.length ? allPayments.length : 0}}</p>
+                    <p class="number m-0 Tajawal-Medium fs-20 me-5">{{allAssociations?.length ? allAssociations.length : 0}}</p>
                 </div>
             </div>
         </label>
