--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -41,6 +41,6 @@
         <app-vat  ></app-vat>
     </div>
     <div *ngSwitchCase="'money-info'">
-        <app-association-orders></app-association-orders>
+        <app-money-info></app-money-info>
     </div>
 </div>
