--- a/src/app/pages/order/components/associations/association-orders/association-orders.component.html
+++ b/src/app/pages/order/components/associations/association-orders/association-orders.component.html
@@ -19,7 +19,7 @@
                 <td  class="position-relative">
                     #{{item?.id}}
                 </td>
-                <td>{{item?.client?.first_name}} {{item?.client?.last_name}}</td>
+                <td>{{item?.location_owner}}</td>
                 <td>طلب إضافة وكيل</td>
                 <td style="color: #ACACAC;">{{item?.date?.split('T')[0]}}</td>
                 <td class="d-flex justify-content-end align-items-center">
