--- a/src/app/pages/order/components/location/location-order-detail/location-order-detail.component.html
+++ b/src/app/pages/order/components/location/location-order-detail/location-order-detail.component.html
@@ -35,7 +35,7 @@
                 <div class="col-6 pe-5 border-right  position-relative">
                     <div class="google_maps_link">
                         <p class="fs-16 Tajawal-Medium blue-txt-color m-0">رابط الموقع</p>
-                        <a class="fs-16 Tajawal-Medium greytxt-color m-0"  href="{{data?.google_maps_link}}" target="_blank">Google Map Link</a>
+                        <a class="fs-16 Tajawal-Medium greytxt-color m-0"  [href]="data?.google_maps_link" target="_blank">Google Map Link</a>
                     </div>
                     <div class="guard_mobile mt-2">
                         <p class="fs-16 Tajawal-Medium blue-txt-color m-0">جوال الحارس</p>
